[package]
name = "ssh"
version = "0.1.0"
authors = ["Jens Nockert <jens@nockert.se>"]
build = "build.rs"

[dependencies]
rand = "0.3"
byteorder = "0.3"
rust-gmp = "*"
rust-crypto = { git = "https://github.com/jmquigs/rust-crypto", commit = "b4aa28bef4619d20436e109ff16f91395d287be8" }

[dev-dependencies]
quickcheck = "0.2"
quickcheck_macros = "0.2"

[[bin]]
name = "ssh"
path = "src/ssh.rs"