[package]
name = "ssh"
version = "0.1.1"
authors = ["Jens Nockert <jens@nockert.se>"]
#build = "build.rs" # NOTE: unused at the moment

[dependencies]
num = "*"
rand = "0.3"
byteorder = "0.3"
rust-crypto = "^0.2"

[dev-dependencies]
quickcheck = "0.2"
quickcheck_macros = "0.2"

[[bin]]
name = "ssh"
path = "src/ssh.rs"
